--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ body {
   background-color: #f8f8f8;
   color: #666;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
