--- a/styles.css
+++ b/styles.css
@@ -5,27 +5,78 @@
   padding: 0;
 }
 
-/* Set a modern font */
-body {
-  font-family: Arial, sans-serif;
+html, body {
+  height: 100%;
 }
 
-/* Set background color and center content */
 body {
   background-color: #f8f8f8;
   color: #666;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
+  font-family: Arial, sans-serif;
+  display: grid;
+  grid-template-areas:
+    ". . head . ."
+    ". nav main aside ."
+    ". . foot . .";
+
+  grid-template-columns: 1fr 150px 600px 150px 1fr;
+  grid-template-rows: min-content auto min-content;
+
+  padding-top: min(5vh, 32px);
 }
 
-/* Add some padding and limit container width */
-.container {
-  padding: 20px;
-  max-width: 600px; /* Adjust the value to your desired width */
-  margin: 0 auto; /* Center the container horizontally */
+@media (max-width: 900px) {
+  body {
+    display: grid;
+    grid-template-areas:
+      ". head ."
+      ". nav ."
+      ". aside ."
+      ". main ."
+      ". foot .";
+
+    grid-template-columns: 1fr 600px 1fr;
+    grid-template-rows: min-content min-content min-content auto min-content;
+  }
+}
+
+@media (max-width: 600px) {
+  body {
+    display: grid;
+    grid-template-areas:
+      "head"
+      "nav"
+      "aside"
+      "main"
+      "foot";
+    grid-template-columns: 100%;
+    grid-template-rows: min-content min-content min-content auto min-content;
+    margin-inline: 16px;
+  }
+}
+
+body>header {
+  grid-area: head;
+}
+
+body>nav {
+  grid-area: nav;
+}
+
+body>main {
+  grid-area: main;
+}
+
+body>footer {
+  grid-area: foot;
+}
+
+body>aside {
+  grid-area: aside;
+}
+
+img {
+  max-width: min(100%, 600px);
 }
 
 /* Style the heading */
@@ -37,16 +88,9 @@ h1 {
   margin-bottom: 20px;
 }
 
-/* Style the image */
-.img-container {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 20px;
-}
-
-.img-container img {
-  max-width: 600px;
-  height: auto;
+h1,
+h2 {
+  text-transform: uppercase;
 }
 
 /* Style the text */
@@ -58,7 +102,9 @@ p {
 }
 
 /* Reset default browser styles */
-dl, dd, dt {
+dl,
+dd,
+dt {
   margin: 0;
   padding: 0;
 }
@@ -85,7 +131,8 @@ dt {
 }
 
 /* Optional: Add a border between <dt> and <dd> */
-dt, dd {
+dt,
+dd {
   border-top: 1px solid #ccc;
   padding-block: 10px;
 }
